Fix body clipping bag in chromium browser

--- a/triangle.css
+++ b/triangle.css
@@ -7,6 +7,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+	transform: translateZ(400px);
 }
 
 
